# partecl-codegen

./: .gitignore  CMakeLists.txt  README  README.md
doc/: Configuration.md
doc/impl/: ConfigParser.md
example/add/: add.c  config  tests.txt
example/add_one_to_array/: add_one.c  add_one.config  add_one.tests
example/addc/: addc.c  addc.config
example/char_count/: char_count.c  char_count.config  char_count.tests
example/linear_search/: linear_search.c  linear_search.config  linear_search.tests
src/: ConfigParser.cpp  ConfigParser.h  Constants.h  CpuCodeGenerator.cpp  CpuCodeGenerator.h  KernelGenerator.cpp  KernelGenerator.h  Main.cpp  Utils.cpp  Utils.h
test/macros/: macros.c  macros.config
test/paper-examples/freq/: freq.c  freq.config  run-tool.sh  tests.txt
test/pointers/: freq3.c  freq3.config  tests.txt
test/result-compare/: add2.c  add2.config  add2.tests  addarray.c  addarray.config  addarray.tests  addc.c  addc.config  config2.txt  config_array.txt  run-partecl.sh  run-tool.sh  tests.txt
